# agent-trace-replay

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
deploy/: prometheus.yml
docker/: entrypoint-api.sh  entrypoint-normalizer.sh  entrypoint-worker.sh
docker/api/: Dockerfile
docker/normalizer/: Dockerfile
docker/worker/: Dockerfile
docs/: LIMITATIONS.md
fixtures/: sample_ingest.json  sample_replay_inject.json
fixtures/demo/: replay_checkout_clean.json  replay_knowledge_slow.json  replay_refund_inject.json  trace_checkout.json  trace_knowledge_assist.json  trace_refund_support.json
fixtures/golden/: refund_inject_expected.json
scripts/: demo.ps1  demo.sh  publish-github.ps1
src/api/: dependencies.py  main.py
src/api/routes/: replays.py  traces.py
src/api/services/: manifest_query.py  replay_schedule.py  trace_ingest.py
src/normalizer/: consumer_loop.py  main.py  manifest_builder.py  service.py
src/shared/: config.py
src/shared/db/: __init__.py  models.py  session.py
src/shared/kafka/: consumer.py  health.py  producer.py  topics.py
src/worker/: consumer_loop.py  main.py  metrics.py  service.py  step_executor.py
tests/: test_golden_integration.py  test_golden_refund_inject.py  test_health.py  test_ingest_integration.py  test_ingest_schemas.py  test_manifest_builder.py  test_normalizer_integration.py  test_replay_integration.py  test_replay_results.py  test_replay_schemas.py  test_step_executor.py
(+6 files in other folders)
